# cookiecutter-python-cli

./: .pyup.yml
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .bumpversion.cfg  .gitattributes  .gitignore  README.md  noxfile.py  pyproject.toml  requirements_dev.txt  settings.json  setup.py  tasks.json  tox.ini
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/: cli.py
