[tool.poetry]
name = "{{ cookiecutter.pypi_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.test-dependencies]
pytest = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
nox = "^2020.8.22"
sphinx = "^3.2.1"
restructuredtext_lint = "^1.3.1"
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"

[tool.poetry.scripts]
{{ cookiecutter.script_name }} = "{{ cookiecutter.package_name }}.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages", "tests"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.package_name }}"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
